Fix styling bugs on mobile

--- a/page-examples/custom.css
+++ b/page-examples/custom.css
@@ -78,9 +78,11 @@ main {
 }
 
 .home .download,
-.home .github {
+.home .github,
+.about .download,
+.about .github {
     font-size: 1.5rem;
-    margin: 0 1rem;
+    margin: 1rem;
 
     color: #fff;
 }
